--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 
 <h1>OmniDatum</h1>
-<p> Are you sick of scraping data out of the html pages? to get what you looking for? join us at GovHack </p>
-<p> Please see  <a href="http://govhack.org.nz/2016-events-and-info/auckland/">Visit GovHack</a> </p>
-<p> Please visit our <a href="irc://chat.freenode.net:6667/#omnidatum">IRC</a></p> </p>
+<p> Are you sick and tired of scraping data out of html pages to get what you're looking for? join us at GovHack! </p>
+<p> Please,  <a href="http://govhack.org.nz/2016-events-and-info/auckland/">Visit GovHack</a> </p>
+<p> Please, visit our <a href="irc://chat.freenode.net:6667/#omnidatum">IRC</a></p> </p>
 <p> <a href="http://omnidatum.github.io">Visit us</a></p>
 
 </body>
