--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>OmniDatum <small>#OpenData #OpenGov</small></h1>
 <p> Are you sick of scraping data out of html pages to get what you looking for? Join us at GovHack. </p>
 <p> See <a href="http://govhack.org.nz/2016-events-and-info/auckland/">GovHack</a> </p>
-<p> Visit our <a href="irc://chat.freenode.net:6667/#omnidatum">IRC channel</a></p> <p></p>
+<p> Visit our <a href="irc://chat.freenode.net:6667/#omnidatum">IRC channel</a></p>
 <p> <a href="http://omnidatum.github.io">Visit us</a></p>
 
 </body>
