--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-<h1>OmniDatum</h1>
-<p> Are you sick and tired of scraping data out of html pages to get what you're looking for? join us at GovHack! </p>
-<p> Please,  <a href="http://govhack.org.nz/2016-events-and-info/auckland/">Visit GovHack</a> </p>
-<p> Please, visit our <a href="irc://chat.freenode.net:6667/#omnidatum">IRC</a></p> </p>
-<p> <a href="http://omnidatum.github.io">Visit us</a></p>
+<h1>OmniDatum <small>#OpenData #OpenGov</small></h1>
+<p> Are you sick and tired of scraping data out of html pages to get what you're looking for? Join us at GovHack! </p>
+<p> Please, <a href="http://govhack.org.nz/2016-events-and-info/auckland/">Visit GovHack</a> </p>
+<p> Please, visit our <a href="irc://chat.freenode.net:6667/#omnidatum">IRC channel</a></p> </p>
+<p> <a href="http://omnidatum.github.io">Visit us</a> </p>
 
 </body>
 </html>
