Added the new pages.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
 
+    <title>Catchy-title</title>
+
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Biryani:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel='stylesheet' type='text/css' href='style.css'>
@@ -12,7 +14,37 @@
       <h1>Catchy-title</h1>
       <div id='addressBox'>
         <input id='addressBox-input' type='text' placeholder='Enter your address'>
-        <div id='addressBox-link' onclick=''><i class="fa fa-search" aria-hidden="true"></i></div>
+        <a href='#productionWrap'><div id='addressBox-link'><i class="fa fa-search" aria-hidden="true"></i></div></a>
+      </div>
+    </div>
+
+    <div id='productionWrap' class='page'>
+      <div id='productionWrap-page' class='page'>
+        <div id='sun'>
+          <div id='layer1'></div>
+          <div id='layer2'></div>
+          <div id='layer3'></div>
+        </div>
+        <div id='productionCanvas' class='canvas'></div>
+        <p class='centerText'><span class='superlarge'>500</span>sunlight hours</p>
+      </div>
+    </div>
+
+    <div id='consumptionWrap' class='page'>
+      <div class='page'>
+        <h2>Consumption</h2>
+      </div>
+    </div>
+
+    <div id='investmentWrap' class='page'>
+      <div class='page'>
+        <h2>Investment</h2>
+      </div>
+    </div>
+
+    <div id='environmentWrap' class='page'>
+      <div class='page'>
+        <h2>Eco-friendly-ness</h2>
       </div>
     </div>
 
