--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         $('#consumptionWrap').hide();
         $('#investmentWrap').hide();
         $('#environmentWrap').hide();
+        //$('#startWrap').height($(window).height());
         $('.production-wrap-jump-click').click(function(){
           $('#productionWrap').show();
           $('#consumptionWrap').show();
