Finished the layout for the consumption page.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,16 @@
     </div>
 
     <div id='consumptionWrap' class='page'>
-      <div id=''>
-      <div class='consumptionWrap_col1'>
+      <div id='consumptionWrap-inner'>
+        <div id='consumptionWrap-col2'>
+          <h2>It's complicated</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <p class='slant'>Read more all about it <a href='http://google.com'>here</a></p>
+        </div>
+
+        <div id='consumptionWrap-col1'>
+          <div id='consumptionCanvas' class='canvas'></div>
+        </div>
       </div>
     </div>
 
