--- a/graphtests.html
+++ b/graphtests.html
@@ -7,11 +7,11 @@
   <body>
     <h1>Solar Hours per month</h1>
 
-    <!-- <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script> -->
-    <script type="text/javascript" src="d3.v4.js"></script>
-    <!-- solar by month -->
-    <script type="text/javascript" src="solarbymonth2.js"></script>
-    <!-- <script type="text/javascript" src="householdConsumption.js"></script> -->
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+<!--     <script type="text/javascript" src="d3.v3.js"></script>
+ -->    <!-- solar by month -->
+<!--     <script type="text/javascript" src="solarbymonth2.js"></script>
+ -->    <script type="text/javascript" src="householdConsumption.js"></script>
 
 
 
