--- a/graphtests.html
+++ b/graphtests.html
@@ -3,6 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+
+    <style>
+
+body {
+ font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+ fill: none;
+ stroke: #000;
+ shape-rendering: crispEdges;
+}
+
+.x.axis path {
+ display: none;
+}
+
+.line {
+ fill: none;
+ stroke: steelblue;
+ stroke-width: 1.5px;
+}
+
+</style>
+
+
   </head>
   <body>
     <h1>Solar Hours per month</h1>
