--- a/graphtests.html
+++ b/graphtests.html
@@ -5,28 +5,23 @@
     <title></title>
 
     <style>
-
 body {
  font: 10px sans-serif;
 }
-
 .axis path,
-.axis line {
+.axis line  {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
 }
-
 .x.axis path {
  display: none;
 }
-
-.line {
+.line, .line2 {
  fill: none;
  stroke: steelblue;
  stroke-width: 1.5px;
 }
-
 </style>
 
 
