--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id='consumptionWrap-inner'>
           <div id='consumptionWrap-col2'>
             <h2>It's complicated</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p>The reason the graph looks like this is because of the difference in generation rates over the seasons. During summer the solar intensity is higher so you save more on energy used and also sell more energy to the grid. During the winter the opposite happens.</p>
             <p class='slant'>Read more all about it <a href='http://google.com'>here</a></p>
           </div>
 
@@ -64,7 +64,7 @@
           <div id='investmentCanvas' class='canvas'>
           </div>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            Initial investment into solar can seem daunting. However the savings made from generating your own energy and selling back into the grid will pay back the investment over time. Beyond that point the income and savings made from this becomes profit.
           </p>
         </div>
       </div>
