Changed to flexbox

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <div id='productionWrap-col3'>
           <ul id='optionList'>
-            <li class='selected'>Low</li>
-            <li>Medium</li>
-            <li>High</li>
+            <li id='lowButton' class='selected'>Low</li>
+            <li id='medButton'>Medium</li>
+            <li id='higButton'>High</li>
           </ul>
         </div>
 
