--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
       var testMonthData = [220, 190, 150, 130, 110, 100, 120, 130, 150, 160, 190, 200];
-      visualise(testMonthData);
+      //visualise(testMonthData);
 
       var placeSearch, autocomplete;
       var componentForm = {
