--- a/index.html
+++ b/index.html
@@ -45,10 +45,24 @@
         </div>
       </div>
 
+
+<div id="prodWrap">
+  <div id="prodContainer">
+    <div id="prodItem1">
+      <p class="label">Your annual sunlight hours</p>
+      <p id="sunlightHoursNumber" class="bigNumber">2066</p>
+    </div>
+
+    <div id="prodItem2">
+    </div>
+  </div>
+</div>
+
+
       <div id='consumptionWrap' class='page'>
         <div id='consumptionWrap-inner'>
           <div id='consumptionWrap-col2'>
-            <h2>It's complicated</h2>
+            <h2>Seasonal Changes</h2>
             <p>The reason the graph looks like this is because of the difference in generation rates over the seasons. During summer the solar intensity is higher so you save more on energy used and also sell more energy to the grid. During the winter the opposite happens.</p>
             <p class='slant'>Read more all about it <a href='http://google.com'>here</a></p>
           </div>
