--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id='productionWrap' class='page'>
         <div id='productionWrap-col1' class='col'>
           <p class='label'>Your annual sunlight hours</p>
-          <p id='sunlightHoursNumber' class='bigNumber bigNumberRes'>500</p>
+          <p id='fucksda' class='bigNumber bigNumberRes'>Loading...</p>
         </div>
 
         <div id='productionWrap-col3'>
@@ -50,7 +50,7 @@
   <div id="prodContainer">
     <div id="prodItem1">
       <p class="label">Your annual sunlight hours</p>
-      <p id="sunlightHoursNumber" class="bigNumber">2066</p>
+      <p id="sunlightHoursNumber" class="bigNumber">Loading...</p>
     </div>
 
     <div id="prodItem2">
